# webscrap

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  config.properties.example  pyproject.toml  requirements.txt  simple_test.py  uol_login_scraper.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_config.py  test_scraper.py
